8242478: compiler implementation for records (Second Preview)
Reviewed-by: mcimadamore, jlahoda, darcy